# oop_lab_7

./: CMakeLists.txt  README.md
include/: BattleVisitor.h  Editor.h  FightTask.h  GameWorld.h  NPC.h  NPCFactory.h  Observer.h
src/: BattleVisitor.cpp  Editor.cpp  GameWorld.cpp  NPC.cpp  NPCFactory.cpp  Observer.cpp  main.cpp
tests/: test_npc.cpp
